# aim-platform

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  PROJECT_STATE.md  README.md  aim_dev.db  alembic.ini  audit-findings.md  linear-import.csv  pilot_accounts.local.md  pyproject.toml  pytest.ini  render.yaml  tasks.md
.github/: dependabot.yml  pull_request_template.md
ai-core/: README.md
ai_core/: calibration.py  contextual_memory.py  difficulty_adapter.py  (+8 more)
services/aim-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/aim-engine/app/: __init__.py  main.py
services/aim-engine/app/api/: __init__.py  analysis.py  router.py  system.py
services/aim-engine/app/contracts/: README.md  __init__.py  learning.py
services/aim-engine/app/core/: __init__.py  config.py  service_info.py
services/aim-engine/app/domain/: __init__.py
services/aim-engine/app/errors/: __init__.py  aim_safe_failure.py
services/aim-engine/app/pipeline/: README.md  __init__.py  aim_analysis_pipeline.py  context.py  errors.py  interfaces.py  placeholder.py
services/aim-engine/app/schemas/: aim_analysis_request.py  aim_analysis_response.py
services/aim-engine/app/validation/: __init__.py  aim_request_validator.py
services/aim-engine/tests/: README.md  test_aim_analysis_pipeline.py  test_aim_engine_unit.py  test_aim_fixtures.py  test_aim_request_validator.py  test_aim_safe_failure.py  test_analysis_endpoint.py  test_app_factory.py  test_learning_contracts.py  test_mastery_calculator_integration.py  test_no_speed_mastery_guard.py  test_pipeline_interface.py  test_recommendation_engine_integration.py  test_retention_tracker_integration.py  test_system_endpoints.py
services/aim-engine/tests/fixtures/: README.md  __init__.py  aim_request_fixtures.py  aim_response_fixtures.py
(+3740 files in other folders)
