[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aim-algorithm"
version = "0.1.0"
description = "Adaptive Intelligence Module backend, domain services, and frontend shell."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2",
    "sqlalchemy>=2",
    "psycopg[binary]>=3.2",
    "PyJWT[crypto]>=2.8",
    "uvicorn[standard]>=0.27",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
scheduler = [
    "apscheduler>=3.10",
]
ml = [
    "xgboost>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

